# pctsp

./: .gitignore  .pylintrc  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile:scip  PreLoad.cmake  README.md  environment.yml  knapsack-test.txt  mkdocs.yml  pyproject.toml  requirements.txt  scip.dockerfile  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  bump.yml  tests.yml
cli/: pctsp
cmake/modules/: FindGMP.cmake  FindReadline.cmake  FindSCIP.cmake  FindSCIPSDP.cmake  FindTBB.cmake  FindYAML_CPP.cmake
datasets/: grid8.dot  suurballes.dot
docs/: api.md  developer.md  index.md  installation.md  usage.md
include/pctsp/: algorithms.hh  branching.hh  constraint.hh  cost_cover.hh  cycle_cover.hh  data_structures.hh  event_handlers.hh  exception.hh  filepath.hh  graph.hh  heuristic.hh  knapsack.hh  logger.hh  node_selection.hh  preprocessing.hh  pygraph.hh  pyutils.hh  renaming.hh  robust.hh  sciputils.hh  separation.hh  solution.hh  stats.hh  subtour_elimination.hh  valid_inequality.hh  walk.hh
paper/: library.bib  main.tex
pctsp/: CMakeLists.txt  __init__.py  __main__.py  algorithms.cpp  algorithms.py  constants.py  data_structures.py  graph.cpp  heuristic.py  knapsack.cpp  preprocessing.cpp  preprocessing.py  pypctsp.cpp  pyutils.py  suurballe.py
pctsp/algorithms/: __init__.py  algorithms.py  extension_collapse.py  heuristic.py  path_extension_collapse.py
pctsp/apps/: __init__.py  csv_app.py  dataset_app.py  main_app.py  options.py  plot_app.py  tables_app.py  utils_app.py
pctsp/compare/: __init__.py  dryrun_experiment.py  exact_experiment.py  heuristic_experiment.py  params.py  product_of_params.py  relaxation_experiment.py
pctsp/constants/: __init__.py  constants.py
pctsp/lab/: __init__.py  lab.py  run_algorithm.py
pctsp/plot/: __init__.py  plot_edges.py  plot_graph.py  plot_tour.py  plot_vertices.py
pctsp/preprocessing/: __init__.py  preprocessing.py
pctsp/suurballe/: __init__.py  suurballe.py
pctsp/tspwp/algorithms/: CMakeLists.txt  __init__.py  pctsp.py  suurballe.py
pctsp/tspwp/constants/: CMakeLists.txt  __init__.py  vertex_constants.py
pctsp/tspwp/heuristic/: CMakeLists.txt  __init__.py  extension_collapse.py  heuristic.cpp  random_heuristic.py  suurballes_heuristic.py
pctsp/tspwp/preprocessing/: __init__.py  components.py
pctsp/utils/: __init__.py  utils.py
pctsp/vial/: __init__.py  data_config.py  experiment.py  model_params.py  preprocessing.py  result.py  vial.py
src/: CMakeLists.txt  algorithms.cpp  branching.cpp  cost_cover.cpp  cycle_cover.cpp  data_structures.cpp  event_handlers.cpp  graph.cpp  heuristic.cpp  knapsack.cpp  logger.cpp  node_selection.cpp  preprocessing.cpp  pygraph.cpp  robust.cpp  sciputils.cpp  separation.cpp  solution.cpp  stats.cpp  subtour_elimination.cpp
template/: __init__.py
tests/: CMakeLists.txt  conftest.py  fixtures.cpp  fixtures.hh  test_algorithms.cpp  test_algorithms.py  test_apps.py  test_branching.cpp  test_branching.py  test_constraint.cpp  test_cost_cover.cpp  test_cycle_cover.cpp  test_data_structures.cpp  test_fixtures.cpp  test_graph.cpp  test_graph.py  test_heuristic.cpp  test_heuristic.py  test_knapsack.cpp  test_lab.py  test_logger.cpp  test_logger.py  test_params.py  test_pctsp.cpp  test_preprocessing.cpp  test_preprocessing.py  test_pygraph.cpp  test_random.cpp  test_rename.cpp  test_robust.cpp  test_sanity.py  test_scipsdp.cpp  test_sciputils.cpp  test_separation.cpp  test_stats.cpp  test_stats.py  test_subtour_elimination.cpp  test_suurballe.py  test_vial.py  test_walk.cpp
tests/test_algorithms/: conftest.py  test_pctsp.py  test_suurballe.py
tests/test_heuristic/: test_extension_collapse.py  test_random_heuristic.py  test_suurballes_heuristic.py
tests/test_preprocessing/: conftest.py  test_libpreprocessing.py  test_remove.py
tspwp/heuristic/: heuristic.cpp
tspwp/preprocessing/: CMakeLists.txt  disjoint_paths.py  leaves.py
